# VC_5

./: .gitignore  LICENSE.txt  README.md
Firmware/: VC5.code-workspace
Firmware/VC5/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_support.cpp  FreeRTOS_support.h  MCP23017.cpp  MCP23017.h  Mutex.cpp  Mutex.h  SH1106_disp_driver.cpp  SH1106_disp_driver.h  VC5_RP2040.cpp  VC5_RP2040.h  VC5_config.h  VC5_display_row.cpp  VC5_display_row.h  VC5_global.h  VC5_usb_protocol.h  display_driver_itf.h  led_WS2812.cpp  led_WS2812.h  led_WS2812.pio  led_WS2812.pio.h  led_WS2812_pio_init.h  main.cpp  rotary.cpp  rotary.h  rotary_bank.cpp  rotary_bank.h  tusb_config.h  usb_cmd_processor.cpp  usb_cmd_processor.h  usb_descriptors.cpp  usb_descriptors.h  usb_device.cpp  usb_device.h
Firmware/VC5/paint/: paint.cmake
Firmware/VC5/paint/Config/: DEV_Config.h
Firmware/VC5/paint/Fonts/: CMakeLists.txt
Firmware/VC5/paint/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
Firmware/VC5/pico-sdk/lib/tinyusb/hw/bsp/rp2040/: family.cmake
Firmware/VC5/pico-sdk/lib/tinyusb/src/device/: usbd.c
Hardware/schematic/: VC5.kicad_pcb  VC5.kicad_prl  VC5.kicad_pro  VC5.kicad_sch  VC5_library.kicad_sym  displays.kicad_sch  fp-info-cache  sym-lib-table  trace_specs.ods
Hardware/schematic/VC5_footprint_library.pretty/: RaspberryPi_Pico_Common_THT_custom.kicad_mod
Hardware/schematic/VC5_schematic/: LEDs.kicad_sch  VC5.kicad_pcb  VC5.kicad_prl  VC5.kicad_pro  VC5.kicad_sch  VC5_library.bak  VC5_library.kicad_sym  displays.kicad_sch  fp-info-cache  fp-lib-table  rotaries.kicad_sch  ~VC5.kicad_sch.lck
Hardware/schematic/VC5_schematic/VC5_footprint_library.pretty/: MCP23017_IO_expander.kicad_mod  PEC11R4220FS0024.kicad_mod  PEC11R_4220F_S0024.kicad_mod  PinHeader_1x08_P2.54mm_Vertical_Display.kicad_mod
Hardware/schematic/VC5_schematic/components/IO_expander/: MCP23017_IO_expander.kicad_mod  MCP2307_IO_expander.kicad_sym
Hardware/schematic/VC5_schematic/components/RP_Pico/: RPi_Pico_THT.kicad_mod
Hardware/schematic/VC5_schematic/components/display/: 2.54mm_pin_header.SLDPRT  README.txt
Hardware/schematic/VC5_schematic/components/rotary/: PEC11R-4220F-S0024.kicad_sym  PEC11R-4220F-S0024.lib  PEC11R-4220F-S0024.mod
Hardware/schematic/components/RP_Pico/: RPI_Pico.kicad_sym
Hardware/schematic/components/display/: OLED_1.3inch_sh1106.SLDASM  OLED_pcb_1.3.SLDPRT
Hardware/schematic/components/rotary/: PEC11R-4220F-S0024.lib
WinApp/: ColorTemplate.h  VC5.sln  VC5.vcxproj  VC5Application.cpp  VC5Application.h  VC5Unit.cpp  VC5Unit.h  VC5_app_config.h  VC5_global.h  WinUSBDevice.cpp  WinUSBDevice.h  WinUSBInterface.cpp  WinUSBInterface.h  WinUtils.cpp  WinUtils.h  main.cpp
